# hackathon-2024-11-llama

./: README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yaml
fastapi/: .gitignore  pyproject.toml
fastapi/prisma/: schema.prisma
fastapi/src/: app.py
nextapp/: config.ts  package-lock.json  package.json  tailwind.config.ts
nextapp/app/: AppLoader.tsx  ClientProvider.tsx  layout.tsx  page.tsx
nextapp/app/api/v1/healthz/: route.ts
nextapp/app/finetune/: page.tsx
nextapp/app/translator/: ArticleContent.tsx  article_content.css  page.tsx
nextapp/components/app/: FileExplorer.tsx
nextapp/src/server/webapi/: cors.ts  cors_preflight.ts
nextapp/styles/: globals.css
